--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </nav>
 
         <div class="content">
-            <span class="title">Freelance Web Developer</span>
-            <h1>Hello, I’m <span>Fatima</span></h1>
+            <span class="title">Graphic Designerr</span>
+            <h1>Hello, I’m <span>OSMAN</span></h1>
             <p>I’m working on a professional, visually sophisticated and technologically proficient, responsive and multi-functional React Template Imroz.</p>
-            <a href="#" class="btn">Download CV</a>
+            <a href="#file:///C:/Users/Osman/Downloads/OSMAN.pdf" class="btn">Download CV</a>
         </div>
     </div>
 
