--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="title">Graphic Designerr</span>
             <h1>Hello, I’m <span>OSMAN</span></h1>
             <p>I’m working on a professional, visually sophisticated and technologically proficient, responsive and multi-functional React Template Imroz.</p>
-            <a href="#file:///C:/Users/Osman/Downloads/OSMAN.pdf" class="btn">Download CV</a>
+            <a href="C:/Users/Osman/Downloads/OSMAN.pdf" class="btn">Download CV</a>
         </div>
     </div>
 
