--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div class="slider slider-1">
+  <div class="photos">
+    <img src="https://i.ibb.co/3sQXw31/skate.jpg" class="shown" alt="">
+    <img src="https://i.ibb.co/C92YGtg/shark.jpg" alt="">
+    <img src="https://i.ibb.co/0mkkmG9/fish1.jpg" alt="">
+    <img src="https://i.ibb.co/cNWS2Vy/fish2.jpg" alt="">
+    <div class="buttons">
+      <div class="prev"></div>
+      <div class="next"></div>
+    </div>
+  </div>
+</div>
+<div class="slider slider-2">
+  <div class="photos">
+    <img src="https://i.ibb.co/3sQXw31/skate.jpg" class="shown" alt="">
+    <img src="https://i.ibb.co/C92YGtg/shark.jpg" alt="">
+    <img src="https://i.ibb.co/0mkkmG9/fish1.jpg" alt="">
+    <img src="https://i.ibb.co/cNWS2Vy/fish2.jpg" alt="">
+    <div class="buttons">
+      <div class="prev"></div>
+      <div class="next"></div>
+    </div>
+  </div>
+</div>
     <div class="hero">
         <nav>
             <img src="./img/logo.png" class="logo">
