--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <script src="script.js"></script>
     <div class="hero">
         <nav>
             <img src="./img/logo.png" class="logo">
